--- a/config/locales/arb/nomenclatures.yml
+++ b/config/locales/arb/nomenclatures.yml
@@ -1136,6 +1136,7 @@ arb:
         # height: "Hauteur"
         # immunoglobulins_concentration: "Concentration en immunoglobulines Gamma"
         # inhibitors_presence: "Présence de résidus d’inhibiteurs"
+        # leaf_count: "Nombre de talles"
         # length: "Longueur"
         # lipolysis: "Lipolyse"
         # livestock_unit: "UGB (Unité de Gros Bétail)"
@@ -1165,6 +1166,7 @@ arb:
         # shape: "Forme"
         # somatic_cell_concentration: "Dénombrement des cellules somatiques"
         # temperature: "Température"
+        # thousand_grain_weight: "Poids de mille grains"
         # total_bacteria_concentration: "Dénombrement des germes totaux"
         # unique_synthesis_index: "ISU (Index de Synthèse Unique)"
         # urea_concentration: "Teneur moyenne en urée"
@@ -1356,6 +1358,7 @@ arb:
         # calf: "Veau"
         # cattle_herd: "Troupeau de bovins"
         # crop: "Culture"
+        # cultivable_zone: "Zone cultivable"
         # electricity: "Electricité"
         # equipment: "Équipement"
         # equipment_rent: "Location d’équipement"
@@ -1418,12 +1421,14 @@ arb:
         # acetal: "Acetal"
         # actilact: "Actilact"
         # additive: "Adjuvant"
+        # alfalfa_crop: "Culture de luzerne"
         # animal_building: "Bâtiment d’accueil pour les animaux"
         # animal_building_division: "Piece d’accueil pour les animaux"
         # animal_food_building_division: "Piece d’accueil pour les aliments"
         # animal_waste_building_division: "Zone des déchets organiques"
         # anti_slug: "Anti-limace"
         # apple_crop: "Verger de pommiers"
+        # ascott_wheat_crop: "Culture de blé tendre Ascott"
         # aubues_land_parcel: "Parcelle sur craie Nord Vienne (Aubues)"
         # baler: "Botteleuse"
         # barley_grain: "Grain d’orge"
@@ -1435,27 +1440,40 @@ arb:
         # bulk_hay: "Foin Vrac"
         # bulk_urea_46: "Engrais Urée 46% VRAC"
         # calf: "Veau"
+        # caphorn_wheat_crop: "Culture de blé tendre Caphorn"
         # cattle_herd: "Troupeau de bovins"
         # cattle_manure: "Fumier de bovins"
+        # cereals_feed_bag_25: "Aliments céréales en sac de 25 kg"
         # champagne_land_parcel: "Parcelle sur craie Sud Charente et Charente-Martime  (terre de champagne)"
         # chemical_fertiliser_division: "Emplacement de stockage des engrais"
         # clay_land_parcel: "Parcelle d'argile lourde"
         # clay_limestone_land_parcel: "Parcelle argilo-calcaire (Groies)"
         # complete_herbicide: "Herbicide total"
-        # coop:ammonitre_33,5%_vr: "ammonitre COOP 33,5% vr"
+        # coop:ammonitre_33,5%_vr: "ammonitre COOP 33,5% vrac"
+        # coop:bd_s_miradoux_r1_cel_gold_net_25kg: "Semence de Blé tendre Miradoux ( r1 cel gold) sac de 25kg"
+        # coop:bth_s_ascott_r1_gau+_red_25kg: "Semence de Blé tendre Ascott (r1 gau+ red) sac de 25kg"
+        # coop:bth_s_caphorn_r1_gau+red_25kg: "Semence de Blé tendre Caphorn (r1 gau+ red) sac de 25kg"
+        # coop:bth_s_euclide_r1_gau+red_25kg: "Semence de Blé tendre Euclide (r1 gau+ red) sac de 25kg"
+        # coop:bth_s_rubisko_r1_gau+red_25kg: "Semence de Blé tendre Rubisko (r1 gau+ red) sac de 25kg"
+        # coop:chlorure_60%_gr_vr: "chlorure COOP 60% gr vrac"
         # coop:ficelle_filogamm_350_bob_5kg: "ficelle filogamm 350 bob 5kg"
-        # coop:metarex_rg_tds_20kg: "metarex rg tds 20kg"
+        # coop:metarex_ino_20kg: "metarex ino sac de 20kg"
+        # coop:metarex_rg_tds_20kg: "metarex rg tds sac de 20kg"
         # coop:sel_mer_essore_la_baleine_sac_25kg: "sel mer essore la baleine sac 25kg"
+        # coop:super_46%_gr._vr: "super 46% COOP gr vrac"
         # coop:uree_gr_vrac: "uree gr vrac"
         # corn_crop: "Culture de maïs"
         # corn_grain: "Graine de maïs"
+        # corn_seed_25: "Semence de maïs sac de 25kg"
         # cow_milk: "Lait de vache"
+        # cultivable_zone: "Zone cultivable"
         # diesel: "Diesel"
         # duck_band: "Bande de canards"
         # duck_herd: "Groupe de canards"
         # electricity: "Électricité"
         # equipment: "Équipement"
         # equipment_building_division: "Emplacement de stockage du matériel"
+        # euclide_wheat_crop: "Culture de blé tendre Euclide"
         # ewe_milk: "Lait de brebis"
         # fallow_crop: "Jachère"
         # female_adult_cattle_herd: "Troupeau de vache laitière"
@@ -1468,6 +1486,8 @@ arb:
         # goat_milk: "Lait de chèvre"
         # granite_arena_land_parcel: "Parcelle de sol sur arène granitique"
         # grass: "Herbe"
+        # grass_seed_25: "Semence de prairie sac de 25kg"
+        # hard_wheat_crop: "Culture de blé dur"
         # hard_wheat_grain: "Graine de blé dur"
         # hard_wheat_seed_25: "Semence de blé dur 25kg"
         # hard_wheat_straw: "Paille de blé dur"
@@ -1485,12 +1505,15 @@ arb:
         # manure_division: "Fumière"
         # milk_tank: "Tank à lait"
         # mineral_cleaner: "Nettoyant chimique"
+        # miradoux_hard_wheat_crop: "Culture de blé dur Miradoux"
+        # mixed_chemical_fertilizer: "Mélange d'engrais"
         # molluscicide: "Molluscicide"
         # mower: "Faucheuse"
         # natural_water: "Eau de pluie / du puit"
         # office_building: "Bureau"
         # office_building_division: "Pièce de bureau"
         # other_herbicide: "Herbicide autre"
+        # pea_crop: "Culture de pois"
         # plow: "Charrue"
         # plum_crop: "Verger de pruniers"
         # poacea_herbicide: "Herbicide graminées"
@@ -1511,14 +1534,19 @@ arb:
         # silty_clay_loam_land_parcel: "Parcelle limono-argileuse"
         # small_equipment: "Petit matériel"
         # sorghum_crop: "Culture de sorgho"
+        # sorghum_seed_25: "Semence de sorgho sac de 25kg"
         # sower: "Semoir"
+        # spelt_seed_25: "Semence d'épeautre sac de 25kg"
         # spelt_wheat_crop: "Culture d’épeautre"
         # sprayer: "Pulvérisateur"
         # spread_renting: "Location d’épandeur"
         # spreader: "Épandeur à engrais"
         # spreader_trailer: "Épandeur à fumier"
+        # spring_barley_crop: "Culture d'orge de printemps"
+        # spring_barley_seed_25: "Semence d'orge de printemps - sac de 25kg"
         # sunflower_crop: "Culture de tournesol"
         # swamp_peaty_land_parcel: "Parcelle de marais tourbeux"
+        # tablur_hard_wheat_crop: "Culture de blé dur Tablur"
         # technician: "Technicien"
         # temporary_meadow_crop: "Culture de prairie temporaire"
         # tractor: "Tracteur"
@@ -1533,6 +1561,8 @@ arb:
         # wheat_straw: "Paille de blé"
         # wheat_straw_bales: "Bottes de paille de blé"
         # wine: "Vin"
+        # winter_barley_crop: "Culture d'orge d'hiver"
+        # winter_barley_seed_25: "Semence d'orge d'hiver sac de 25kg"
         # zea_herbicide: "Herbicide maïs"
       # name: "Variantes de produits"
     product_natures:
@@ -1564,6 +1594,7 @@ arb:
         # cattle_herd: "Troupeau de bovins"
         # chemical_fertilizer: "Engrais chimique"
         # crop: "Culture"
+        # cultivable_zone: "Zone cultivable"
         # duck_band: "Bande de canards"
         # duck_herd: "Groupe de canards"
         # electricity: "Électricité"
@@ -1593,6 +1624,7 @@ arb:
         # milk: "Lait"
         # milk_tank: "Tank à lait"
         # mineral_cleaner: "Nettoyant chimique"
+        # mixed_chemical_fertilizer: "Mélange d'engrais"
         # molluscicide: "Molluscicide"
         # mower: "Faucheuse"
         # natural_water: "Eau de pluie / du puit"
@@ -1721,6 +1753,7 @@ arb:
         # antiseptic: "Antiseptique"
         # apache: "Blé Apache"
         # apis: "Apidés"
+        # ascott: "Ascott"
         # asteraceae: "Astéracée"
         # aubues_soil: "Sols sur craie Nord Vienne (Aubues)"
         # autan: "Autan"
@@ -1753,12 +1786,15 @@ arb:
         # clay_soil: "Terre d'argile lourde"
         # courtot: "Courtot"
         # cultivable_land_parcel: "Parcelle culturale"
+        # cultivable_zone: "Zone cultivable"
         # cultur: "Cultur"
         # disinfectant: "Désinfectant"
         # easement: "Aménagement foncier"
         # electricity: "Electricité"
         # equipment: "Équipement"
         # esperia: "Esperia"
+        # euclide: "Euclide"
+        # fabaceae: "Fabaceae"
         # fabulis: "Fabulis"
         # flap_silt_soil: "Limons battants"
         # forager: "Ensileuse"
@@ -1797,6 +1833,7 @@ arb:
         # manure: "Fumier"
         # matter: "Matérialisable"
         # meat: "Viande"
+        # medicago: "Medicago"
         # medicine: "Médicament"
         # merlot_blanc: "Merlot blanc"
         # merlot_noir: "Merlot noir"
@@ -1813,6 +1850,7 @@ arb:
         # ovis: "Ovin"
         # pescadou: "Pescadou"
         # pinot_noir: "Pinot noir"
+        # pisum: "Pisum"
         # plant: "Végétal"
         # plant_food: "Nourriture végétale"
         # plant_medicine: "Produit phytosanitaire"
@@ -1830,6 +1868,7 @@ arb:
         # recital: "Recital"
         # red_chesnut_soil: "Terres rouges à chataigniers"
         # renan: "Renan"
+        # rubisko: "Rubisko"
         # runal: "Runal"
         # salmo: "Salmonidé"
         # salt: "Sel"
