--- a/config/locales/eng/action.yml
+++ b/config/locales/eng/action.yml
@@ -135,7 +135,11 @@ eng:
     backend/cells/revenus_by_product_nature_cells: #?
     backend/cells/rss_cells: #?
     backend/cultivable_land_parcels: #?
-    backend/cultivable_zones: #?
+    backend/cultivable_zones:
+      # edit: "Modifier la zone cultivable\_: %{name}"
+      # index: "Zones cultivables"
+      # new: "Nouvelle zone cultivable\_: %{name}"
+      # show: "Zone cultivable"
     backend/custom_field_choices:
       edit: "Edit the option: %{name}"
       new: "Add a new option for a choices list"
