--- a/config/locales/eng/nomenclatures.yml
+++ b/config/locales/eng/nomenclatures.yml
@@ -1507,6 +1507,7 @@ eng:
         # actilact: "Actilact"
         # additive: "Adjuvant"
         # alfalfa_crop: "Culture de luzerne"
+        # alfalfa_seed: "Semence de luzerne"
         # animal_building: "Bâtiment d’accueil pour les animaux"
         # animal_building_division: "Piece d’accueil pour les animaux"
         # animal_food_building_division: "Piece d’accueil pour les aliments"
@@ -1514,6 +1515,7 @@ eng:
         # anti_slug: "Anti-limace"
         # apple_crop: "Verger de pommiers"
         # ascott_wheat_crop: "Culture de blé tendre Ascott"
+        # ascott_wheat_seed_25: "Semence de blé tendre Ascott"
         # aubues_land_parcel: "Parcelle sur craie Nord Vienne (Aubues)"
         # baler: "Botteleuse"
         # barley_grain: "Grain d’orge"
@@ -1526,6 +1528,7 @@ eng:
         # bulk_urea_46: "Engrais Urée 46% VRAC"
         # calf: "Veau"
         # caphorn_wheat_crop: "Culture de blé tendre Caphorn"
+        # caphorn_wheat_seed_25: "Semence de blé tendre Caphorn"
         # cattle_herd: "Troupeau de bovins"
         # cattle_manure: "Fumier de bovins"
         # cereals_feed_bag_25: "Aliments céréales en sac de 25 kg"
@@ -1559,6 +1562,7 @@ eng:
         # equipment: "Équipement"
         # equipment_building_division: "Emplacement de stockage du matériel"
         # euclide_wheat_crop: "Culture de blé tendre Euclide"
+        # euclide_wheat_seed_25: "Semence de blé tendre Euclide"
         # ewe_milk: "Lait de brebis"
         # fallow_crop: "Jachère"
         # female_adult_cattle_herd: "Troupeau de vache laitière"
@@ -1591,6 +1595,7 @@ eng:
         # milk_tank: "Tank à lait"
         # mineral_cleaner: "Nettoyant chimique"
         # miradoux_hard_wheat_crop: "Culture de blé dur Miradoux"
+        # miradoux_hard_wheat_seed_25: "Semence de blé dur Miradoux"
         # mixed_chemical_fertilizer: "Mélange d'engrais"
         # molluscicide: "Molluscicide"
         # mower: "Faucheuse"
@@ -1599,6 +1604,7 @@ eng:
         # office_building_division: "Pièce de bureau"
         # other_herbicide: "Herbicide autre"
         # pea_crop: "Culture de pois"
+        # pea_seed: "Semence de pois"
         # plow: "Charrue"
         # plum_crop: "Verger de pruniers"
         # poacea_herbicide: "Herbicide graminées"
@@ -1632,6 +1638,7 @@ eng:
         # sunflower_crop: "Culture de tournesol"
         # swamp_peaty_land_parcel: "Parcelle de marais tourbeux"
         # tablur_hard_wheat_crop: "Culture de blé dur Tablur"
+        # tablur_hard_wheat_seed_25: "Semence de blé dur Tablur sac de 25kg"
         # technician: "Technicien"
         # temporary_meadow_crop: "Culture de prairie temporaire"
         # tractor: "Tracteur"
