--- a/config/locales/fra/help/cultivable_zones-index.txt
+++ b/config/locales/fra/help/cultivable_zones-index.txt
@@ -1,12 +1,12 @@
-====== Parcelles Culturales ======
+====== Zones Culturales ======
 
-Vous avez accès au récapitulatif de toutes vos parcelles culturales.
+Vous avez accès au récapitulatif de toutes vos zones culturales.
 
-Les parcelles culturales réprésentent le support d'implantation d'une culture.
+Les zones culturales réprésentent le support d'implantation d'une culture.
 Elles comportent une ou plusieurs parcelles contiguës ou non.
 
-!!! Une parcelle culturale comporte une ou plusieurs [[>backend/land_parcels|parcelles]].
+!!! Une zone culturale comporte une ou plusieurs [[>backend/land_parcels|parcelles]].
 
->>> Une parcelle culturale est utilisée comme support d'une production végétale [[>backend/productions|production végétale]].
+>>> Une zone culturale est utilisée comme support d'une production végétale [[>backend/productions|production végétale]].
 
 
