--- a/config/locales/jpn/action.yml
+++ b/config/locales/jpn/action.yml
@@ -136,7 +136,11 @@ jpn:
     backend/cells/revenus_by_product_nature_cells: #?
     backend/cells/rss_cells: #?
     backend/cultivable_land_parcels: #?
-    backend/cultivable_zones: #?
+    backend/cultivable_zones:
+      # edit: "Modifier la zone cultivable\_: %{name}"
+      # index: "Zones cultivables"
+      # new: "Nouvelle zone cultivable\_: %{name}"
+      # show: "Zone cultivable"
     backend/custom_field_choices:
       # edit: "Modifier l’option\_: %{name}"
       # new: " Création d’une option pour une liste de choix"
