Begins to make ProductMeasurement working

--- a/config/locales/arb/nomenclatures.yml
+++ b/config/locales/arb/nomenclatures.yml
@@ -1147,7 +1147,7 @@ arb:
         # meat_withdrawal_period: "Période d’attente avant remise en vente de viande"
         # milk_withdrawal_period: "Période d’attente avant remise en vente de lait"
         # motor_power: "Puissance du moteur"
-        # net_surface_area: "Surface net"
+        # net_surface_area: "Surface nette"
         # net_volume: "Volume net"
         # net_weight: "Poids net"
         # nitrogen_concentration: "Teneur en azote"
