--- a/config/locales/fra/complement.yml
+++ b/config/locales/fra/complement.yml
@@ -775,7 +775,7 @@ fra:
         meat_withdrawal_period: "Période d’attente avant remise en vente de viande"
         milk_withdrawal_period: "Période d’attente avant remise en vente de lait"
         motor_power: "Puissance du moteur"
-        net_surface_area: "Surface net"
+        net_surface_area: "Surface nette"
         net_volume: "Volume net"
         net_weight: "Poids net"
         nitrogen_concentration: "Teneur en azote"
@@ -2881,7 +2881,7 @@ fra:
         meat_withdrawal_period: "Période d’attente avant remise en vente de viande"
         milk_withdrawal_period: "Période d’attente avant remise en vente de lait"
         motor_power: "Puissance du moteur"
-        net_surface_area: "Surface net"
+        net_surface_area: "Surface nette"
         net_volume: "Volume net"
         net_weight: "Poids net"
         nitrogen_concentration: "Teneur en azote"
@@ -3538,7 +3538,7 @@ fra:
         meat_withdrawal_period: "Période d’attente avant remise en vente de viande"
         milk_withdrawal_period: "Période d’attente avant remise en vente de lait"
         motor_power: "Puissance du moteur"
-        net_surface_area: "Surface net"
+        net_surface_area: "Surface nette"
         net_volume: "Volume net"
         net_weight: "Poids net"
         nitrogen_concentration: "Teneur en azote"
@@ -4419,7 +4419,7 @@ fra:
         meat_withdrawal_period: "Période d’attente avant remise en vente de viande"
         milk_withdrawal_period: "Période d’attente avant remise en vente de lait"
         motor_power: "Puissance du moteur"
-        net_surface_area: "Surface net"
+        net_surface_area: "Surface nette"
         net_volume: "Volume net"
         net_weight: "Poids net"
         nitrogen_concentration: "Teneur en azote"
@@ -4475,7 +4475,7 @@ fra:
         meat_withdrawal_period: "Période d’attente avant remise en vente de viande"
         milk_withdrawal_period: "Période d’attente avant remise en vente de lait"
         motor_power: "Puissance du moteur"
-        net_surface_area: "Surface net"
+        net_surface_area: "Surface nette"
         net_volume: "Volume net"
         net_weight: "Poids net"
         nitrogen_concentration: "Teneur en azote"
@@ -4531,7 +4531,7 @@ fra:
         meat_withdrawal_period: "Période d’attente avant remise en vente de viande"
         milk_withdrawal_period: "Période d’attente avant remise en vente de lait"
         motor_power: "Puissance du moteur"
-        net_surface_area: "Surface net"
+        net_surface_area: "Surface nette"
         net_volume: "Volume net"
         net_weight: "Poids net"
         nitrogen_concentration: "Teneur en azote"
