--- a/config/locales/fra/models.yml
+++ b/config/locales/fra/models.yml
@@ -736,6 +736,7 @@ fra:
     indicator: "Indicator"
     indicator_data: "Indicator data"
     indicator_datatype: "Indicator datatype"
+    indicator_datum: "Indicator datum"
     indicator_name: "Indicator name"
     indicators: "Indicators"
     indirect_links: "Liens indirects"
