Continues to implements product measurements

--- a/config/locales/arb/models.yml
+++ b/config/locales/arb/models.yml
@@ -1537,6 +1537,7 @@ arb:
     # measure_value_unit: "Measure value unit"
     # measure_value_value: "Measure value value"
     # measured_at: "Mesuré à"
+    # measurements: "Measurements"
     # meat_withdrawal_period: "Délai d'attente (viande)"
     # member: "Membre"
     # members: "Membres"
