--- a/config/locales/fra/nomenclatures.yml
+++ b/config/locales/fra/nomenclatures.yml
@@ -1033,7 +1033,6 @@ fra:
         net_volume: "Volume net"
         net_weight: "Poids net"
         nitrogen_concentration: "Teneur en azote"
-        nitrogen_input: "Apport en azote"
         phosphorus_concentration: "Teneur en phosphore"
         plant_life_state: "Phase du bioprocessus de vie d’un végétal"
         plant_reproduction_state: "Phase du bioprocessus de reproduction d’un végétal"
@@ -1043,6 +1042,7 @@ fra:
         protein_matters_concentration: "Teneur en matières protéïques"
         provisionnal_grains_yield: "Rendement prévisionnel en grain"
         provisionnal_irrigation_water_input: "Quantité d'eau d'irrigation prévisionnelle"
+        # provisionnal_nitrogen_input: "Provisionnal nitrogen input"
         reproductor: "Reproducteur"
         sex: "Sexe"
         shape: "Forme"
