--- a/config/locales/spa/models.yml
+++ b/config/locales/spa/models.yml
@@ -540,7 +540,7 @@ spa:
     # choices: "Choix de champ complémentaire"
     # choices_count: "Nb. Choix"
     # city: "Ville"
-    # city_name: "Nom"
+    # city_name: "Nom de ville"
     # client: "Client"
     # client_account: "Compte client associé"
     # client_accounts: "Comptes clients"
@@ -841,6 +841,7 @@ spa:
     # measure_value_unit: "Measure value unit"
     # measure_value_value: "Measure value value"
     # measured_at: "Mesuré à"
+    # measurements: "Measurements"
     # meat_withdrawal_period: "Délai d'attente (viande)"
     # member: "Membre"
     # members: "Membres"
