--- a/config/locales/eng/models.yml
+++ b/config/locales/eng/models.yml
@@ -1092,6 +1092,7 @@ eng:
     # measure_value_unit: "Measure value unit"
     # measure_value_value: "Measure value value"
     # measured_at: "Mesuré à"
+    # measurements: "Measurements"
     # meat_withdrawal_period: "Délai d'attente (viande)"
     member: "Member"
     members: "Members"
