Provisional takes only one "n"

--- a/config/locales/fra/nomenclatures.yml
+++ b/config/locales/fra/nomenclatures.yml
@@ -831,7 +831,7 @@ fra:
         phytosanitary_registry: "Registre phytosanitaire"
         prescription: "Prescription vétérinaire"
         profit_and_loss_statement: "Compte de résultat"
-        provisionnal_manure_management_plan: "Plan prévisionnel de fumure (PPF)"
+        provisional_manure_management_plan: "Plan prévisionnel de fumure (PPF)"
         purchase_estimate: "Devis d’achat"
         purchase_invoice: "Facture d’achat"
         purchase_order: "Achat"
@@ -1040,9 +1040,9 @@ fra:
         potassium_concentration: "Teneur en potassium"
         protein_concentration_index: "TP (Taux Protéïque)"
         protein_matters_concentration: "Teneur en matières protéïques"
-        provisionnal_grains_yield: "Rendement prévisionnel en grain"
-        provisionnal_irrigation_water_input: "Quantité d'eau d'irrigation prévisionnelle"
-        # provisionnal_nitrogen_input: "Provisionnal nitrogen input"
+        provisional_grains_yield: "Rendement prévisionnel en grain"
+        provisional_irrigation_water_input: "Quantité d'eau d'irrigation prévisionnelle"
+        # provisional_nitrogen_input: "Provisional nitrogen input"
         reproductor: "Reproducteur"
         sex: "Sexe"
         shape: "Forme"
