Renames harvest_at to harvested_at like in the conventions

--- a/config/locales/arb/action.yml
+++ b/config/locales/arb/action.yml
@@ -1256,7 +1256,7 @@ arb:
     # ground_appearance: "Aspect du sol"
     # group: "Groupe"
     # groups: "Groupes"
-    # harvest_at: "Récolté le"
+    # harvested_at: "Récolté le"
     help: "المساعدة"
     hint: "تلميح&nbsp;: %{value}"
     # historic: "Historique"
