--- a/config/locales/fra/action.yml
+++ b/config/locales/fra/action.yml
@@ -1157,7 +1157,7 @@ fra:
     ground_appearance: "Aspect du sol"
     group: "Groupe"
     groups: "Groupes"
-    harvest_at: "Récolté le"
+    harvested_at: "Récolté le"
     help: "Aide"
     hint: "Astuce\_: %{value}"
     historic: "Historique"
