Renames winter_hordeum with hordeum_hibernum

--- a/config/locales/arb/nomenclatures.yml
+++ b/config/locales/arb/nomenclatures.yml
@@ -1772,7 +1772,7 @@ arb:
         # bioproduct: "Produit vivant"
         # black_valley_soil: "Terres noires de vallées"
         # bos: "Bovin"
-        # brassage_winter_hordeum: "Orge d'hiver de brasserie"
+        # brassage_hordeum_hibernum: "Orge d'hiver de brasserie"
         # brassica_napus: "Colza"
         # brassica_nigra: "Moutarde noire"
         # brassica_rapa: "Navet"
@@ -1831,7 +1831,7 @@ arb:
         # lepus: "Lagomorphe"
         # levis: "Levis"
         # lona: "Lona"
-        # low_protein_brassage_winter_hordeum: "Orge d'hiver de brasserie (faible teneur en protéïnes)"
+        # low_protein_brassage_hordeum_hibernum: "Orge d'hiver de brasserie (faible teneur en protéïnes)"
         # low_protein_spring_hordeum: "Orge de printemps (faible teneur en protéïnes)"
         # malus: "Pommier"
         # mammalia: "Mammifère"
@@ -1923,7 +1923,7 @@ arb:
         # vitis_vinifera: "Vitis vinifera"
         # water: "Eau"
         # wine: "Vin"
-        # winter_hordeum: "Orge d'hiver"
+        # hordeum_hibernum: "Orge d'hiver"
         # worker: "Travailleur"
         # zea: "Maïs"
         # zone: "Zone physique"
